--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -702,6 +702,9 @@ img {
                             width: 30%;
                         }
                         .serial {
+                            &.unregistered {
+                                color: rgb(var(--v-theme-error));
+                            }
                             width: 20%;
                         }
                         .seller {
@@ -774,11 +777,87 @@ img {
                             width: 40%;
                         }
                     }
+
+                    .ticket-list {
+                        .description {
+                            margin: 0 10px;
+                        }
+
+                        .date {
+                            width: 8%;
+                        }
+                        .number {
+                            width: 10%;
+                        }
+                        .author {
+                            width: 18%;
+                            overflow: hidden;
+                        }
+                        .name {
+                            width: 45%;
+                            overflow: hidden;
+                        }
+                        .status {
+                            width: 9%;
+                        }
+                        .buttons {
+                            width: 10%;
+                        }
+
+                        .item-ticket {
+                            display: flex;
+                            border: 1px solid;
+                            border-color: rgb(var(--v-theme-blueC));
+                            padding:  10px 10px;
+                            border-radius: 6px;
+                            box-shadow: $shadowBlack;
+
+                            &.status_1 {
+                                opacity: 0.5;
+                            }
+                        }
+                    }
                 }
                 
                 .main-card {
                     padding: 20px;
                     margin-bottom: 20px;
+
+                    &:before {
+                        content: "";
+                        display: block;
+                        height: 10px;
+                        width: 100%;
+                        position: absolute;
+                        left: 0;
+                        top: 0;
+                        border-radius: 6px 6px 0 0;
+                    }
+                    &.status_0 {
+                        &:before {
+                            background-color: $white
+                        }
+                    }
+                    &.status_1 {
+                        &:before {
+                            background-color: $black
+                        }
+                    }
+                    &.status_2 {
+                        &:before {
+                            background-color: rgb(var(--v-theme-success))
+                        }
+                    }
+                    &.status_3 {
+                        &:before {
+                            background-color: rgb(var(--v-theme-active))
+                        }
+                    }
+                    &.status_4 {
+                        &:before {
+                            background-color: rgb(var(--v-theme-error))
+                        }
+                    }
 
                     .shift-list {
                         display: flex;
@@ -922,6 +1001,50 @@ img {
             display: flex;
             gap: 20px;
             justify-content: center;
+        }
+    }
+
+    .modal-full {
+        width: 100%;
+        height: 100%;
+        padding: 20px;
+
+        .law-list {
+            height: 467px;
+            margin: 10px 0;
+            border: 1px solid rgb(var(--v-theme-secondary));
+            border-radius: 4px;
+            display: flex;
+            flex-direction: column;
+            gap: 4px;
+            padding: 4px;
+            overflow-y: auto;
+
+            .law-item {
+                background: rgb(var(--v-theme-primary));
+                padding: 2px 10px;
+                border-radius: 2px;
+                transition: ease all 0.25s;
+                display: flex;
+
+                .number {
+                    width: 5%;
+                }
+                .name {
+                    width: 75%;
+                }
+                .period {
+                    width: 10%;
+                }
+                .penalty {
+                    width: 10%;
+                }
+
+                &.active {
+                    background: rgb(var(--v-theme-secondary));
+                    color: $black
+                }
+            }
         }
     }
 }
